# WebFortress

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  apache_1.3.31-s390-whatever-linux22.README  setup.sh  test.sh  test.toml
.devcontainer/: devcontainer.json
Docker/: setup.sh
crabcan/: Cargo.toml
crabcan/src/: capabilities.rs  child.rs  cli.rs  config.rs  config_parser.rs  container.rs  container_config.rs  errors.rs  hostname.rs  ipc.rs  main.rs  mounts.rs  namespaces.rs  networking.rs  resources.rs
docker_materials/: Dockerfile
docs/: # Installing vsftpd2.3.md  apache_install.md  dvwa_install.md  falco.md  juiceshop_notes.md  owasp_juiceshop.md  webgoat_install.md  webgoat_notes.md
examples/: Install_WebGoat.sh  Makefile  syscall_web_fortress_output.txt  test.toml  test_bash.toml  test_python.toml
examples/configuration_files/: apache_new_test.toml  apache_test.toml  bash_test.toml  dvwa_test.toml  ftp_test.toml  juiceshop_test.toml  python_test.toml  webgoat_test.toml
examples/syscall_analysis/: count_paths_pythonserver.out  python_webserver_test.txt  syscall_parser.py
os_fundamentals/: Cargo.toml
os_fundamentals/src/: main.rs
syscall_analysis/: syscall_count.txt  syscall_crabcan_output.txt  syscall_parser.py
web_fortress/: Cargo.toml
web_fortress/src/: child.rs  cli.rs  config_parser.rs  container.rs  container_config.rs  errors.rs  hostname.rs  main.rs  mounts.rs  resources.rs  syscalls.rs  syscalls_deny.rs
