[package]
name = "crabcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
nix = "0.22.1"
scan_fmt = "0.2.6"
capctl = "0.2.0"
syscallz = "0.16.1"
libc = "0.2.102"
cgroups-rs = "0.2.6"
rlimit = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
extrasafe = "0.5.1"